# master_thesis

./: .gitignore  LICENSE  README.md  pipeline.md  start.rb
Data/: README.md
Presentations/: presentation_text.txt
Source/: README.md
compute_flows/: dummy.rb  run.sh
compute_flows/srsf/: CMakeLists.txt  README.md  TV.P  basic.h  dist-exclude  mainSRSF.P  mainSRSF.cpp  rigid.cpp
compute_flows/srsf/settings/: IntrinsicsRGB.xml
compute_trajectory_similarities/: .ruby-gemset  Gemfile  README.md  Rakefile  build_configuration.rb  cie_lab.rb  compute_similarities.rb  depth_field.rb  file_loader.rb  fileparser.rb  flow_variance.rb  mat3x4.rb  mcm_task.rb  meta_info.rb  my_bench.rb  point.rb  point3f.rb  run.sh  similarity_matrix.rb  similarity_task.rb  trajectory.rb  trajectory_manager.rb
core/: README.md
eval/: labelfile2mat.m  main.m
extract_depth/: main.m
extract_trackings/: README.md  extract.rb  fileparser.rb  point.rb  traj_out_trackings  trajectory.rb  trajectory_manager.rb
flow/: README.md  generate_flow.rb  normalize_filenames.rb  run.rb  run.sh  to_ppm
initialize_data/: init_data.m
kernighan_lin/: README.md  pom.xml
matlab_shared/: labeI_idx_to_W_lookup_idx.m  label_to_vector_index.m  loadAllTrajectoryLabelFrames.m  mat2img.m  trajectoryLabelsAtFrame.m
normalize_sensor_data/: run.rb
playground/: 230.ppm
segmentation/: demo_alt_clustering.m  main.m
spectral_clustering/: aggregate_mat_cols.m  com.m  demo_alt_clustering.m  displayFlow.m  display_affinities.m  display_affinity_vec.m  display_clustering.m  display_eigenvectors.m  foo.txt  (+17 more)
(+782 files in other folders)
